@@ -116,6 +116,8 @@ DEFAULT_VALUE MODEL_DIR "%XTF_DIR;$(FME_HOME)plugins/interlis2/ilimodels;$(FME_H
 GUI TEXT MODEL_DIR Models directory:
 DEFAULT_VALUE INHERITANCE_MAPPING "SuperClass"
 GUI CHOICE INHERITANCE_MAPPING SuperClass%SubClass Inheritance mapping strategy:
+DEFAULT_VALUE GEOMETRY_ENCODING "FMEBIN"
+GUI CHOICE GEOMETRY_ENCODING FMEXML%FMEBIN%FMEHEXBIN%OGCHEXBIN Geometry encoding:
 DEFAULT_VALUE USE_LINETABLES "No"
 GUI CHOICE USE_LINETABLES Yes%No Use Linetables:
 DEFAULT_VALUE TRACEMSGS "No"
